--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>2025 Layer7 CTF</title>
+    <meta name="description" content="선린인터넷고등학교 주최 교내 해킹 전공동아리 Layer7에서 주관하는 CTF 해킹 대회입니다. 다양한 보안 문제를 통해 실력을 겨뤄보세요." />
+    <meta name="keywords" content="CTF, Capture The Flag, 보안, 해킹, Layer7, 대회, 정보보안, 2025, Layer7 CTF, 선린인터넷고등학교, 선린, 선린인고, 정보보호과" />
+    <meta name="author" content="Layer7" />
   </head>
   <body>
     <div id="root"></div>
